--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musiccessories</title>
+  
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -54,7 +57,22 @@
       </div>
     </div>
     <h1>Ready to Order?</h1>
-    <!-- Order form goes here -->
+
+    <form netlify>
+        <label class="block mt-4 font-bold" for="name">What is your name?</label>
+        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+        focus:border-purple-500" type="text" id="name" name="name">
+
+        <label class="block mt-4 font-bold" for="favorite-color">What is your favorite
+        color?</label>
+        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+        focus:border-purple-500" type="text" id="favorite-color" name="favoriteColor">
+
+        <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
+    </form>
+
+
+    
   </div>
 </body>
 
