--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musiccessories</title>
-  
+
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
   <div>
-    <div>
+
+
+    <div flex>
       <h1>
         <a href="index.html">
           <span>Hi! Welcome to</span>
@@ -21,9 +23,11 @@
       </h1>
   
       <p>
-        <strong>No instruments.</strong> <em>Only accessories.</em>
+        No instruments. Only accessories.
       </p>
     </div>
+
+
     <div>
       <div>
         <div>
@@ -36,6 +40,8 @@
         </div>
       </div>
       <div>
+
+
         <div>
           <h2>Guitar Picks (12-pack)</h2>
           <div>
@@ -46,6 +52,8 @@
         </div>
       </div>
       <div>
+
+
         <div>
           <h2>Drum Sticks (Pair)</h2>
           <div>
@@ -54,8 +62,14 @@
           <div>These 100% hickory drum sticks are made in the USA.</div>
           <div>$3.99</div>
         </div>
+
+
       </div>
+
+
     </div>
+
+
     <h1>Ready to Order?</h1>
 
     <form netlify>
