--- a/index.html
+++ b/index.html
@@ -11,18 +11,16 @@
 </head>
 
 <body>
+
   <div>
-
-
-    <div flex>
-      <h1>
+    <div class="flex">
+      <h1 w="1/2">
         <a href="index.html">
-          <span>Hi! Welcome to</span>
-          <span>Musiccessories!</span>
+          <span>Hi! Welcome to Musiccessories!</span>
         </a>
       </h1>
   
-      <p>
+      <p w="1/2">
         No instruments. Only accessories.
       </p>
     </div>
@@ -39,9 +37,9 @@
           <div>$5.49</div>
         </div>
       </div>
+      
+      
       <div>
-
-
         <div>
           <h2>Guitar Picks (12-pack)</h2>
           <div>
