--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 <body>
 
   <div>
+
     <div class="flex">
+     <div w="1/2">
       <h1 w="1/2">
         <a href="index.html">
-          <span>Hi! Welcome to Musiccessories!</span>
+          <span>Hi! Welcome to Musiccessories!</span> SUCCCCCCCCCCCCCCCCCCCKK It
         </a>
       </h1>
+    </div>
   
+    <div w="1/2">
       <p w="1/2">
         No instruments. Only accessories.
       </p>
+    </div>
+
     </div>
 
 
